--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ lab_chip/lab_chip/main.c
 lab_button/lab_button/main.c
 LCD_HelloWorld/LCD_HelloWorld/main.c
 jtag/jtag/main.c
+.vs/kdean003_Stacker/v14
